Trying htaccess again

--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,9 @@ RewriteRule . /index.php [L]
 </IfModule>
 
 # END WordPress
+
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "blog.treble.fm"
+    Header set Access-Control-Allow-Origin "www.blog.treble.fm"
+</IfModule>
